--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
             skills. Beyond coding, I enjoy exploring innovative technologies and
             challenges that contribute to my personal and professional growth.
           </p>
-          <h3>I can use a little bit of</h3>
+          <h3>Language and Tools</h3>
           <div class="icon-list">
             <img class="icon" src="images/favicon/js.png" alt="" />
             <img class="icon" src="images/favicon/php.png" alt="" />
             <img class="icon" src="images/favicon/c-.png" alt="" />
+            <img class="icon" src="images/favicon/science.png" alt="" />
+            <img class="icon" src="images/favicon/mysql.png" alt="" />
           </div>
         </div>
       </section>
