--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
         <div class="content-box">
           <h2>About Me</h2>
           <p>
-            Hello! I'm Muhammad Rayyan Firmansyah, a passionate and aspiring web
-            developer. I have always been deeply interested in programming and
-            development, constantly seeking new opportunities to enhance my
-            skills. Beyond coding, I enjoy exploring innovative technologies and
-            challenges that contribute to my personal and professional growth.
+            Hello! I'm Muhammad Rayyan Firmansyah, a passionate and aspiring web developer. I have
+            always been deeply interested in programming and development, constantly seeking new
+            opportunities to enhance my skills. Beyond coding, I enjoy exploring innovative
+            technologies and challenges that contribute to my personal and professional growth.
           </p>
           <h3>Language and Tools</h3>
           <div class="icon-list">
@@ -76,19 +75,13 @@
               </p>
               <h4 class="education-text">
                 SDN Cimahi Mandiri 3
-                <img
-                  class="education-icon"
-                  src="images/favicon/cm3.png"
-                  alt=""
-                />
+                <img class="education-icon" src="images/favicon/cm3.png" alt="" />
               </h4>
               <p class="education-text">
-                Completed elementary school with a solid foundation in basic
-                academics, including literacy, numeracy, and problem-solving
-                skills. Actively participated in school activities, fostering
-                creativity, teamwork, and discipline. Developed curiosity and a
-                love for learning through interactive projects and
-                extracurricular engagements.
+                Completed elementary school with a solid foundation in basic academics, including
+                literacy, numeracy, and problem-solving skills. Actively participated in school
+                activities, fostering creativity, teamwork, and discipline. Developed curiosity and
+                a love for learning through interactive projects and extracurricular engagements.
               </p>
             </div>
           </div>
@@ -101,19 +94,13 @@
               </p>
               <h4 class="education-text">
                 SMP Negeri 1 Cimahi
-                <img
-                  class="education-icon"
-                  src="images/favicon/sman1.png"
-                  alt=""
-                />
+                <img class="education-icon" src="images/favicon/sman1.png" alt="" />
               </h4>
               <p class="education-text">
-                Completed junior high school with a strong academic record and
-                active involvement in various school activities. Enhanced
-                critical thinking, leadership, and communication skills through
-                group projects, competitions, and student organization
-                participation. Built a deeper understanding of subjects and
-                developed time management abilities.
+                Completed junior high school with a strong academic record and active involvement in
+                various school activities. Enhanced critical thinking, leadership, and communication
+                skills through group projects, competitions, and student organization participation.
+                Built a deeper understanding of subjects and developed time management abilities.
               </p>
             </div>
           </div>
@@ -126,19 +113,14 @@
               </p>
               <h4 class="education-text">
                 SMA Negeri 1 Cimahi
-                <img
-                  class="education-icon"
-                  src="images/favicon/sachi.png"
-                  alt=""
-                />
+                <img class="education-icon" src="images/favicon/sachi.png" alt="" />
               </h4>
               <p class="education-text">
-                I developed critical thinking skills and enhanced my ability to
-                work in a team through various projects, such as P5. I also
-                gained experience in creating several programs and further
-                improved my problem-solving abilities. Additionally, I learned
-                to manage tasks efficiently and adapt to different challenges in
-                both academic and extracurricular activities.
+                I developed critical thinking skills and enhanced my ability to work in a team
+                through various projects, such as P5. I also gained experience in creating several
+                programs and further improved my problem-solving abilities. Additionally, I learned
+                to manage tasks efficiently and adapt to different challenges in both academic and
+                extracurricular activities.
               </p>
             </div>
           </div>
@@ -174,15 +156,13 @@
           <h3>My Social Media</h3>
           <ul>
             <li>
-              <a href="https://steamcommunity.com/id/Trotskyte/">
+              <a href="https://steamcommunity.com/id/nobiyyan/">
                 <i class="fa-brands fa-steam"></i>
                 Steam
               </a>
             </li>
             <li>
-              <a
-                href="https://open.spotify.com/user/3gp53bu13tvsn8r98sfsxasx6?si=e7fdbb311cf84b06"
-              >
+              <a href="https://open.spotify.com/user/3gp53bu13tvsn8r98sfsxasx6?si=e7fdbb311cf84b06">
                 <i class="fa-brands fa-spotify"></i>
                 Spotify
               </a>
@@ -194,7 +174,7 @@
               </a>
             </li>
             <li>
-              <a href="https://Github.com/Trotskyte">
+              <a href="https://Github.com/nobiyyan">
                 <i class="fa-brands fa-github"></i>
                 Github
               </a>
@@ -203,9 +183,7 @@
         </div>
       </section>
 
-      <div class="copy">
-        © 2022 Muhammad Rayyan Firmansyah. All Rights Reserved.
-      </div>
+      <div class="copy">© 2022 Muhammad Rayyan Firmansyah. All Rights Reserved.</div>
     </main>
     <script src="js/homepage.js"></script>
   </body>
